--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.4",
-    "express": "^4.17.1"
+    "cheerio": "^1.0.0-rc.10",
+    "express": "^4.17.1",
+    "got": "^11.8.2"
   }
 }
