--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "stats-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Simple stats API for use with Badges.io service",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Stjepan Mamusa",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.4",
