--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "got": "11.8.2",
     "morgan": "^1.10.0",
     "winston": "^3.6.0"
+  },
+  "devDependencies": {
+    "express-status-monitor": "^1.3.4"
   }
 }
