--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple stats API for use with Badges.io service",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0",
+    "test": "mocha",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
