--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple stats API for use with Badges.io service",
   "main": "server.js",
   "scripts": {
-    "test": "mocha",
+    "test": "jest",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
@@ -21,9 +21,15 @@
     "express-rate-limit": "^6.3.0",
     "got": "11.8.2",
     "morgan": "^1.10.0",
+    "sonarqube-scanner": "^2.8.1",
     "winston": "^3.6.0"
   },
   "devDependencies": {
-    "express-status-monitor": "^1.3.4"
+    "express-status-monitor": "^1.3.4",
+    "jest": "^28.1.0",
+    "jest-sonar-reporter": "^2.0.0"
+  },
+  "jest": {
+    "testResultsProcessor": "jest-sonar-reporter"
   }
 }
