--- a/package.json
+++ b/package.json
@@ -31,5 +31,10 @@
   },
   "jest": {
     "testResultsProcessor": "jest-sonar-reporter"
+  },
+  "jestSonar": {
+    "reportPath": "reports",
+    "reportFile": "test-report.xml",
+    "indent": 4
   }
 }
