Update Build-Scan-Deploy workflow
Signed-off-by: Stjepan Mamuša <49687548+smamusa@users.noreply.github.com>

--- a/.github/workflows/main_my-statsapi.yml
+++ b/.github/workflows/main_my-statsapi.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - my-statsapi
+name: Build -> Sonar Scan -> Azure Deploy
 
 on:
   push:
@@ -32,6 +32,19 @@ jobs:
         with:
           name: node-app
           path: .
+
+  sonarcloud:
+    name: SonarCloud
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   deploy:
     runs-on: ubuntu-latest
