--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   build:
+  name: Build
     runs-on: ubuntu-latest
 
     steps:
@@ -30,6 +31,7 @@ jobs:
           path: .
 
   deploy:
+    name: Deploy
     runs-on: ubuntu-latest
     needs: build
     environment:
