--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "stats-api",
   "version": "1.0.0",
   "description": "Simple stats API for use with Badges.io service",
-  "main": "server.js",
+  "main": "dist/server.js",
   "scripts": {
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "node dist/server.js",
     "test": "jest --coverage",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon dist/server.js"
   },
   "keywords": [],
   "author": "Stjepan Mamusa",
@@ -19,14 +22,19 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "express-rate-limit": "^6.3.0",
-    "got": "11.8.2",
+    "got": "^11.8.5",
     "morgan": "^1.10.0",
     "winston": "^3.6.0"
   },
   "devDependencies": {
-    "express-status-monitor": "^1.3.4",
+    "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^16.11.45",
     "jest": "^28.1.0",
-    "jest-sonar-reporter": "^2.0.0"
+    "jest-sonar-reporter": "^2.0.0",
+    "nodemon": "^2.0.16",
+    "tslint": "^6.1.3",
+    "typescript": "^4.6.4"
   },
   "jest": {
     "testEnvironment": "node",
