--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "apicache": "^1.6.3",
     "axios": "^0.26.1",
     "cheerio": "^1.0.0-rc.10",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-rate-limit": "^6.3.0",
     "got": "^11.8.5",
@@ -27,12 +27,18 @@
     "winston": "^3.6.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.6",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.45",
+    "babel-jest": "^28.1.3",
     "jest": "^28.1.0",
     "jest-sonar-reporter": "^2.0.0",
     "nodemon": "^2.0.16",
+    "ts-jest": "^28.0.7",
     "tslint": "^6.1.3",
     "typescript": "^4.6.4"
   },
