--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express-rate-limit": "^6.5.1",
     "got": "^11.8.5",
     "morgan": "^1.10.0",
-    "winston": "^3.8.1"
+    "winston": "^3.8.1",
+    "tslint": "^6.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
@@ -39,7 +40,6 @@
     "jest-sonar-reporter": "^2.0.0",
     "nodemon": "^2.0.16",
     "ts-jest": "^28.0.7",
-    "tslint": "^6.1.3",
     "typescript": "^4.7.4"
   },
   "jest": {
