--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "got": "^11.8.5",
     "morgan": "^1.10.0",
     "winston": "^3.8.1",
-    "tslint": "^6.1.3"
+    "tslint": "^6.1.3",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
@@ -39,8 +40,7 @@
     "jest": "^28.1.3",
     "jest-sonar-reporter": "^2.0.0",
     "nodemon": "^2.0.16",
-    "ts-jest": "^28.0.7",
-    "typescript": "^4.7.4"
+    "ts-jest": "^28.0.7"
   },
   "jest": {
     "testEnvironment": "node",
