--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
     "morgan": "^1.10.0",
     "winston": "^3.8.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.6",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^18.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-typescript": "^7.18.6",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^28.1.6",
-    "@types/morgan": "^1.9.3",
-    "@types/node": "^18.6.3",
     "babel-jest": "^28.1.3",
     "jest": "^28.1.3",
     "jest-sonar-reporter": "^2.0.0",
