--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
     "got": "^11.8.5",
     "morgan": "^1.10.0",
     "winston": "^3.8.1",
-    "tslint": "^6.1.3",
-    "typescript": "^4.7.4",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.6",
     "@types/morgan": "^1.9.3",
@@ -36,11 +34,15 @@
     "@babel/core": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/mocha": "^9.1.1",
     "babel-jest": "^28.1.3",
     "jest": "^28.1.3",
     "jest-sonar-reporter": "^2.0.0",
     "nodemon": "^2.0.16",
-    "ts-jest": "^28.0.7"
+    "ts-jest": "^28.0.7",
+    "ts-node": "^10.9.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.7.4"
   },
   "jest": {
     "testEnvironment": "node",
