--- a/package.json
+++ b/package.json
@@ -24,11 +24,7 @@
     "express-rate-limit": "^6.5.1",
     "got": "^11.8.5",
     "morgan": "^1.10.0",
-    "winston": "^3.8.1",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^28.1.6",
-    "@types/morgan": "^1.9.3",
-    "@types/node": "^18.6.3"
+    "winston": "^3.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
@@ -42,7 +38,11 @@
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.6",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^18.6.3"
   },
   "jest": {
     "testEnvironment": "node",
