--- a/package.json
+++ b/package.json
@@ -31,19 +31,20 @@
     "@babel/core": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.7",
     "@types/mocha": "^9.1.1",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^18.6.3",
     "babel-jest": "^28.1.3",
     "jest": "^28.1.3",
     "jest-sonar-reporter": "^2.0.0",
     "nodemon": "^2.0.16",
+    "sonarqube-scanner": "^3.1.0",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.7.4",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^28.1.7",
-    "@types/morgan": "^1.9.3",
-    "@types/node": "^18.6.3"
+    "typescript": "^4.7.4"
   },
   "jest": {
     "testEnvironment": "node",
