--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,7 +17,7 @@ sonar.organization=smamusa
 sonar.sources=.
 sonar.exclusions=**/tests/*.js
 sonar.language=js
-sonar.tests=./src/tests
+#sonar.tests=./src/tests
 
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.testExecutionReportPaths=./reports/test-report.xml
