--- a/package.json
+++ b/package.json
@@ -2,49 +2,59 @@
   "name": "stats-api",
   "version": "1.0.0",
   "description": "Simple stats API for use with Badges.io service",
-  "main": "dist/server.js",
+  "exports": "dist/server.js",
+  "type": "module",
+  "engines": {
+    "node": ">=16"
+  },
   "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "prebuild": "eslint -c .eslintrc.cjs --ext .ts src",
     "build": "tsc",
     "prestart:local": "npm run build",
     "start": "node ./dist/server.js",
     "start:local": "node ./dist/server.js",
     "test": "jest --coverage",
-    "dev": "nodemon dist/server.js"
+    "dev": "nodemon dist/server.js",
+    "lint": "eslint -c .eslintrc.cjs --ext .ts src"
   },
   "keywords": [],
   "author": "Stjepan Mamuša",
   "license": "ISC",
   "dependencies": {
-    "@influxdata/influxdb-client": "^1.28.0",
-    "apicache": "^1.6.3",
-    "axios": "^0.27.2",
-    "cheerio": "^1.0.0-rc.12",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "express-rate-limit": "^6.7.0",
-    "got": "^11.8.5",
-    "morgan": "^1.10.0",
-    "winston": "^3.8.1"
+    "@influxdata/influxdb-client": "1.33.2",
+    "apicache": "1.6.3",
+    "axios": "1.6.0",
+    "cheerio": "1.0.0-rc.12",
+    "dotenv": "16.3.1",
+    "express": "4.18.2",
+    "express-rate-limit": "7.1.3",
+    "got": "13.0.0",
+    "morgan": "1.10.0",
+    "winston": "3.11.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.10",
-    "@babel/preset-env": "^7.18.10",
-    "@babel/preset-typescript": "^7.18.6",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^28.1.7",
-    "@types/mocha": "^9.1.1",
-    "@types/morgan": "^1.9.3",
-    "@types/node": "^18.6.3",
-    "babel-jest": "^28.1.3",
-    "jest": "^28.1.3",
-    "jest-sonar-reporter": "^2.0.0",
-    "nodemon": "^2.0.16",
-    "sonarqube-scanner": "^3.1.0",
-    "ts-jest": "^28.0.8",
-    "ts-node": "^10.9.1",
-    "tslint": "^6.1.3",
-    "typescript": "^4.7.4"
+    "@babel/core": "7.23.2",
+    "@babel/preset-env": "7.23.2",
+    "@babel/preset-typescript": "7.23.2",
+    "@types/express": "4.17.20",
+    "@types/jest": "29.5.7",
+    "@types/mocha": "10.0.3",
+    "@types/morgan": "1.9.7",
+    "@types/node": "20.8.10",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
+    "babel-jest": "29.7.0",
+    "eslint": "^8.53.0",
+    "eslint-plugin-jsdoc": "^46.8.2",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "jest": "29.7.0",
+    "jest-sonar-reporter": "2.0.0",
+    "jsdoc": "^4.0.2",
+    "nodemon": "^3.0.1",
+    "sonarqube-scanner": "3.1.0",
+    "ts-jest": "29.1.1",
+    "ts-node": "10.9.1",
+    "typescript": "5.2.2"
   },
   "jest": {
     "testEnvironment": "node",
