--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "node": ">=16"
   },
   "scripts": {
-    "prebuild": "eslint -c .eslintrc.cjs --ext .ts src",
+    "prebuild": "npm run lint && npm run testWithCoverage",
     "build": "tsc",
     "prestart:local": "npm run build",
     "start": "node ./dist/server.js",
     "start:local": "node ./dist/server.js",
-    "test": "jest --coverage",
+    "test": "jest --verbose",
+    "testWithCoverage": "jest --coverage",
     "dev": "nodemon dist/server.js",
     "lint": "eslint -c .eslintrc.cjs --ext .ts src"
   },
@@ -55,15 +56,6 @@
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
     "typescript": "5.2.2"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "collectCoverage": true,
-    "testResultsProcessor": "jest-sonar-reporter",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "/test/"
-    ]
   },
   "jestSonar": {
     "reportPath": "reports",
