Restructure Jest config and Sonar reporting

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
 sonar.projectKey=stjepanmamusa_mystats-api
-sonar.organization=smamusa
+sonar.organization=stjepanmamusa
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=mystats-api
+sonar.projectName=mystats-api
 #sonar.projectVersion=1.0
 
 
@@ -17,9 +17,9 @@ sonar.organization=smamusa
 sonar.sources=.
 sonar.exclusions=**/tests/*.js
 sonar.language=js
-#sonar.tests=./src/tests
+sonar.tests=./src/tests
 
-sonar.javascript.lcov.reportPaths=./coverage/lcov.info
-sonar.testExecutionReportPaths=./reports/test-report.xml
+sonar.javascript.lcov.reportPaths=.src/tests/coverage/lcov.info
+sonar.testExecutionReportPaths=./src/tests/reports/tests-report.xml
 
 sonar.sourceEncoding=UTF-8
