--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "node": ">=16"
   },
   "scripts": {
-    "prebuild": "npm run lint && npm run testWithCoverage",
+    "prebuild": "npm run lint",
     "build": "tsc",
+    "build:test": "npm run build && npm run test",
     "prestart:local": "npm run build",
     "start": "node ./dist/server.js",
     "start:local": "node ./dist/server.js",
-    "test": "jest --verbose",
-    "testWithCoverage": "jest --coverage",
+    "test": "jest",
     "dev": "nodemon dist/server.js",
     "lint": "eslint -c .eslintrc.cjs --ext .ts src"
   },
@@ -58,8 +58,8 @@
     "typescript": "5.2.2"
   },
   "jestSonar": {
-    "reportPath": "reports",
-    "reportFile": "test-report.xml",
+    "reportPath": "./src/tests/reports",
+    "reportFile": "tests-report.xml",
     "indent": 4
   }
 }
