Update Sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -19,8 +19,7 @@ sonar.exclusions=**/tests/*.js
 sonar.language=js
 # sonar.tests is in conflict with sonar.sources only one should be used
 #sonar.tests=./src/tests
-
-sonar.javascript.lcov.reportPaths=./src/tests/coverage/lcov.info
-sonar.testExecutionReportPaths=./src/tests/reports/tests-report.xml
+sonar.javascript.lcov.reportPaths=/src/tests/coverage/lcov.info
+sonar.testExecutionReportPaths=/src/tests/reports/tests-report.xml
 
 sonar.sourceEncoding=UTF-8
