--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start": "node ./dist/server.js",
     "start:local": "node ./dist/server.js",
     "test": "jest",
+    "sonar": "sonar-scanner",
     "dev": "nodemon dist/server.js",
     "lint": "eslint -c .eslintrc.cjs --ext .ts src"
   },
@@ -52,7 +53,7 @@
     "jest-sonar-reporter": "2.0.0",
     "jsdoc": "^4.0.2",
     "nodemon": "^3.0.1",
-    "sonarqube-scanner": "3.1.0",
+    "sonarqube-scanner": "^3.1.0",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
     "typescript": "5.2.2"
