--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,8 +19,10 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: Install, Build and Test
-        run: npm run build:test
+      - name: Install, Build and est
+        run: |
+          npm install
+          npm run build:test
 
   sonarcloud:
     name: Static Code Analysis
