--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "express-rate-limit": "7.1.3",
     "got": "13.0.0",
     "morgan": "1.10.0",
-    "winston": "3.11.0",
-    "eslint": "^8.53.0"
+    "winston": "3.11.0"
   },
   "devDependencies": {
     "@babel/core": "7.23.2",
@@ -47,6 +46,7 @@
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "babel-jest": "29.7.0",
+    "eslint": "^8.53.0",
     "eslint-plugin-jsdoc": "^46.8.2",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "jest": "29.7.0",
